changes to get compatible with java 8